fix css and collapse navbar

--- a/client/src/css/styles.css
+++ b/client/src/css/styles.css
@@ -1,23 +1,100 @@
-
-/*6.4.a	At least six class selectors
-.warning{
-	
-}
-*/
 body{
 	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
+	margin: 0;
+	font-family: Arial, Helvetica, sans-serif;
+	background-image: linear-gradient(rgb(245, 207, 213), white, rgba(246, 247, 183, 0.856));
+	-webkit-background-size: 100%;
+	-moz-background-size: cover;
+	background-size: cover;
+
+	margin-bottom: 0;
+
 }
 footer{
     margin-top: auto;
 }
-/*6.1	Reasonable and convienient UI (e.g., no tech details)
-6.2	All pages are responsive
-6.3	Different responsive layout on one page
-	CSS styling:
-6.4.a	At least six class selectors
-6.4.b	At least two element selectors
-6.4.c	At least two ID selectors
-6.4.d	At least one additional selector
-6.4.e	All styling through CSS (e.g., no tables for layouting)*/
+
+#app {
+	font-family: 'Avenir', Helvetica, Arial, sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	text-align: center;
+	background-color: #cccccc;
+	background-image: linear-gradient(rgb(245, 207, 213), white, rgba(246, 247, 183, 0.856));
+	margin-bottom: 0;
+	
+}
+#grad2{
+	background-color: #cccccc;
+   background-image: linear-gradient(rgb(245, 207, 213), white, rgba(246, 247, 183, 0.856));
+   margin-bottom: 0;
+   background-size: 100%;
+ }
+  
+
+ .bg-memorize {
+	background-color: #cccccc;
+	background-image: linear-gradient(rgb(245, 207, 213), white, rgba(246, 247, 183, 0.856));
+	margin-bottom: 0;
+  }
+
+.topnav {
+	overflow: hidden;
+	background-color: #333;
+}
+  
+.topnav a {
+	float: left;
+	display: block;
+	color: #f2f2f2;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	font-size: 17px;
+}
+  
+.topnav a:hover {
+	background-color: #ddd;
+	color: black;
+}
+  
+.topnav a.active {
+	background-color: #04AA6D;
+	color: white;
+}
+  
+  .topnav .icon {
+	display: none;
+  }
+  
+  @media screen and (max-width: 600px) {
+	.topnav a:not(:first-child) {display: none;}
+	.topnav a.icon {
+	  float: right;
+	  display: block;
+	}
+  }
+  
+  @media screen and (max-width: 600px) {
+	.topnav.responsive {position: relative;}
+	.topnav.responsive .icon {
+	  position: absolute;
+	  right: 0;
+	  top: 0;
+	}
+	.topnav.responsive a {
+	  float: none;
+	  display: block;
+	  text-align: left;
+	}
+  }
+  
+  form {
+	text-align: center;
+  }
+  .btn_message {
+	margin-bottom: 1em;
+  }
+ 
